expose data contact from app contract

--- a/src/dapp/index.html
+++ b/src/dapp/index.html
@@ -24,6 +24,11 @@
         <div id="display-wrapper" class="top-20">
         </div>
         <div class="row top-20">
+            <h2>Administrator: </h2>
+            <label class="form">Airline Count: </label>
+            <p id="airline-count"></p>
+        </div>
+        <div class="row top-20">
             <label class="form">Flight</label> <input type="text" id="flight-number"> <btn class="btn btn-primary" id="submit-oracle">Submit to Oracles</btn>
         </div>
     </main>
