add tests to check voting process

--- a/src/dapp/index.html
+++ b/src/dapp/index.html
@@ -66,6 +66,10 @@
         <div class="row top-20">
             <btn class="btn btn-primary" id="get-balance">Get Passenger 1 Balance</btn>
         </div>
+
+        <div class="row top-20">
+            <btn class="btn btn-primary" id="passenger-withdraw">Withdraw Passenger 1 Balance</btn>
+        </div>
     </main>
 
 </body>
